qiankun 方案： 注册 子应用 后端服务端口转发

--- a/Monorepo/production/qiankun/.env
+++ b/Monorepo/production/qiankun/.env
@@ -13,3 +13,5 @@ VUE_APP_DATA_QUALITY_HOST=/data-quality/
 VUE_APP_DATA_SERVICE_HOST=/data-service/
 
 VUE_APP_MOCK_HOST=/data-mock/
+
+VUE_APP_GOVERN_CHAT_HOST=/Govern-chat/
